added more slides and backup slides to prelim

--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -196,8 +196,9 @@
 \newcommand{\limitermatrix}{\mathbf{\limiterletter}}
 \newcommand{\correctionfluxletter}{p}
 \newcommand{\correctionfluxvector}{\mathbf{\correctionfluxletter}}
-\newcommand{\correctionfluxij}{\MakeUppercase{\correctionfluxletter}_{i,j}}
-\newcommand{\correctionfluxji}{\MakeUppercase{\correctionfluxletter}_{j,i}}
+\newcommand{\correctionfluxentry}{\MakeUppercase{\correctionfluxletter}}
+\newcommand{\correctionfluxij}{\correctionfluxentry_{i,j}}
+\newcommand{\correctionfluxji}{\correctionfluxentry_{j,i}}
 \newcommand{\correctionfluxmatrix}{\mathbf{\MakeUppercase{\correctionfluxletter}}}
 \newcommand{\correctionfluxsumsi}{\MakeUppercase{\correctionfluxletter}^\pm_i}
 \newcommand{\limitedfluxsum}{\limitermatrix\cdot\correctionfluxmatrix}
