--- a/doc/presentations/prelim/presentation.tex
+++ b/doc/presentations/prelim/presentation.tex
@@ -10,6 +10,8 @@
 \usepackage{ifthen}     % for conditionals
 \input{../../dissertation/content/newcommands} % macros file
 
+\newcommand{\contentdir}{../../dissertation/content}
+
 % create toggle for print-friendly mode (no colored heading and sidebar)
 \newtoggle{PRINTMODE}
 \togglefalse{PRINTMODE} %\toggletrue or \togglefalse
@@ -1079,24 +1081,51 @@ Transport Algorithm to Hyperbolic Conservation Laws}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Limiting Coefficients}
+\frametitle{FCT Limitation Process for Systems}
 
 \begin{itemize}
-  \item Bounds to impose on solution are unclear:
+  \item Bounds to impose on FCT solution are unclear for systems case:
     \begin{itemize}
       \item For scalar case, a DMP was used, but no DMP exists for systems.
       \item The invariant domain property is not useful here
         because while the property is known to hold, the domain itself is not
         actually known.
     \end{itemize}
-  \item Choose to impose LED constraint for each component:
-    \begin{equation}
-      \solutionletter_{\min,i}^{\componentindex,n}
-        \leq \solutionletter_i^{\componentindex,n+1}
-        \leq \solutionletter_{\max,i}^{\componentindex,n}
-      \quad \forall\componentindex \eqp
-    \end{equation}
-  \item The FCT scheme is
+  \item One may want to impose physical bounds on some non-conservative
+    set of variables.
+  \item Limitation of conservative variables may not satisfy these bounds.
+  \item Consider the following sets of variables for the 1-D SWE:
+    \begin{itemize}
+      \item \textcolor{secondarycolorheavy}{Conservative}:
+        $\vectorsolution \equiv [\height,\height\velocityx]\transpose$
+      \item \textcolor{secondarycolorheavy}{Primitive}:
+        $\check{\vectorsolution} \equiv [\height,\velocityx]\transpose$
+      \item \textcolor{secondarycolorheavy}{Characteristic}:
+        $\hat{\vectorsolution} \equiv [\velocityx-2\speedofsound,
+          \velocityx+2\speedofsound]\transpose$,
+          where $\speedofsound\equiv\sqrt{\gravity\height}$
+    \end{itemize}
+  \item Results from literature suggest that limitation on a non-conservative
+    set of variables may produce superior results.
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Limitation on Non-Conservative Variables}
+
+\begin{itemize}
+  \item Consider some non-conservative set of variables
+    $\hat{\vectorsolution} = \mathbf{T}^{-1}(\vectorsolution)\vectorsolution$.
+    \begin{itemize}
+      \item For \textcolor{secondarycolorheavy}{conservative} variables,
+        $\mathbf{T}(\vectorsolution)=\mathbb{I}$.
+      \item For \textcolor{secondarycolorheavy}{characteristic} variables,
+        $\mathbf{T}(\vectorsolution)$ is the matrix with right eigenvectors
+        of the Jacobian matrix $\partial\consfluxvector/\partial\vectorsolution$
+        as its columns.
+    \end{itemize}
+  \item The FCT scheme for limitation of conservative variables is
     \begin{equation}
       \lumpedmassentry
         \frac{\solutionvector_i^{n+1}-\solutionvector_i^n}{\dt}
@@ -1104,41 +1133,62 @@ Transport Algorithm to Hyperbolic Conservation Laws}
         + \sum_j\diffusionmatrixletter\ij^{L,n}\solutionvector_j^n
         = \ssrhs_i^n + \sum_j\limitermatrix\ij\odot\correctionfluxmatrix\ij \eqp
     \end{equation}
+  \item Applying a local transformation $\mathbf{T}^{-1}(\solutionvector_i^n)$ gives
+    \begin{equation}
+      \lumpedmassentry
+        \frac{\hat{\solutionvector}_i^{n+1}-\hat{\solutionvector}_i^n}{\dt}
+        + \sum_j\gradiententry\cdot\hat{\consfluxinterpolant}_j^n
+        + \sum_j\diffusionmatrixletter\ij^{L,n}\hat{\solutionvector}_j^n
+        = \hat{\ssrhs}_i^n + \sum_j\limitermatrix\ij\odot\hat{\correctionfluxmatrix}\ij
+        \eqc
+    \end{equation}
+    where accents denote transformed quantities, for example,
+    \begin{equation}
+      \hat{\solutionvector}_j^k
+        = \mathbf{T}^{-1}(\solutionvector_i^n)\solutionvector_j^k
+      \eqc \quad
+      \hat{\correctionfluxmatrix}\ij
+        = \mathbf{T}^{-1}(\solutionvector_i^n)\correctionfluxmatrix\ij
+      \eqp
+    \end{equation}
 \end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Limiting Coefficients (Cont.)}
+\frametitle{Limiting Coefficients}
 
 \begin{itemize}
-  \item Define antidiffusive flux bounds $\mathbf{\limitedfluxbound}_i^\pm$ such that
+  \item Choose $\limitermatrix\ij$ to satisfy some solution bounds
+    $\hat{\solutionvector}_{i}^\pm$ and then define corresponding
+    antidiffusive flux bounds $\hat{\mathbf{\limitedfluxbound}}_i^\pm$:
     \begin{equation}
-      \mathbf{\limitedfluxbound}^-_i \leq
-        \sum\limits_j \limitermatrix\ij\odot\correctionfluxmatrix\ij \leq
-        \mathbf{\limitedfluxbound}^+_i
+      \hat{\mathbf{\limitedfluxbound}}^-_i \leq
+        \sum\limits_j \limitermatrix\ij\odot\hat{\correctionfluxmatrix}\ij \leq
+        \hat{\mathbf{\limitedfluxbound}}^+_i
       \quad\Rightarrow\quad
-      \mathbf{\DMPbound}_i^- \leq
-        \solutionvector_i^{n+1} \leq
-        \mathbf{\DMPbound}_i^+ \quad \forall i \eqp
+      \hat{\solutionvector}_i^- \leq
+        \hat{\solutionvector}_i^{n+1} \leq
+        \hat{\solutionvector}_i^+ \quad \forall i \eqp
     \end{equation}
   \item Performing some algebra gives the definition
     \begin{equation}
-      \mathbf{\limitedfluxbound}_i^\pm \equiv
-        \lumpedmassentry\frac{\mathbf{\DMPbound}_i^\pm-\solutionvector_i^n}{\dt}
-        + \sum_j\gradiententry\cdot\consfluxinterpolant_j^n
-        + \sum_j\diffusionmatrixletter\ij^{L,n}\solutionvector_j^n
-        - \ssrhs_i^n \eqp
+      \hat{\mathbf{\limitedfluxbound}}_i^\pm \equiv
+        \lumpedmassentry\frac{\hat{\solutionvector}_i^\pm
+          -\hat{\solutionvector}_i^n}{\dt}
+        + \sum_j\gradiententry\cdot\hat{\consfluxinterpolant}_j^n
+        + \sum_j\diffusionmatrixletter\ij^{L,n}\hat{\solutionvector}_j^n
+        - \hat{\ssrhs}_i^n \eqp
     \end{equation}
   \item As in the scalar case, negative and positive antidiffusive flux
     sums are required in the limiting coefficient definitions:
     \begin{equation}
-      \correctionfluxletter_i^{\componentindex,-} \equiv
-        \sum\limits_{j:\correctionfluxij^\componentindex<0}
-        \correctionfluxij^\componentindex \eqc \qquad
-      \correctionfluxletter_i^{\componentindex,+} \equiv
-        \sum\limits_{j:\correctionfluxij^\componentindex>0}
-        \correctionfluxij^\componentindex \eqp
+      \hat{\correctionfluxletter}_i^{\componentindex,-} \equiv
+        \sum\limits_{j:\hat{\correctionfluxentry}\ij^\componentindex<0}
+        \hat{\correctionfluxentry}\ij^\componentindex \eqc \qquad
+      \hat{\correctionfluxletter}_i^{\componentindex,+} \equiv
+        \sum\limits_{j:\hat{\correctionfluxentry}\ij^\componentindex>0}
+        \hat{\correctionfluxentry}\ij^\componentindex \eqp
     \end{equation}
 \end{itemize}
 
@@ -1152,10 +1202,10 @@ Transport Algorithm to Hyperbolic Conservation Laws}
     \begin{equation}
       \limiterletter_i^{\componentindex,\pm} \equiv\left\{
         \begin{array}{l l}
-          1 & \correctionfluxletter_i^{\componentindex,\pm} = 0\\
+          1 & \hat{\correctionfluxletter}_i^{\componentindex,\pm} = 0\\
           \min\left(1,\frac{Q_i^{\componentindex,\pm}}
-            {\correctionfluxletter_i^{\componentindex,\pm}}\right) &
-          \correctionfluxletter_i^{\componentindex,\pm} \ne 0
+            {\hat{\correctionfluxletter}_i^{\componentindex,\pm}}\right) &
+          \hat{\correctionfluxletter}_i^{\componentindex,\pm} \ne 0
         \end{array}
       \right. \eqp
     \end{equation}
@@ -1163,9 +1213,9 @@ Transport Algorithm to Hyperbolic Conservation Laws}
       \limiterletter\ij^\componentindex \equiv\left\{
         \begin{array}{l l}
           \min(L_i^{\componentindex,+},L_j^{\componentindex,-}) &
-            \correctionfluxij^\componentindex \geq 0\\
+            \hat{\correctionfluxentry}\ij^\componentindex \geq 0\\
           \min(L_i^{\componentindex,-},L_j^{\componentindex,+}) &
-            \correctionfluxij^\componentindex < 0
+            \hat{\correctionfluxentry}\ij^\componentindex < 0
         \end{array}
       \right. \eqp
     \end{equation}
@@ -1232,26 +1282,17 @@ Transport Algorithm to Hyperbolic Conservation Laws}
 \frametitle{Conclusions}
 
 \begin{itemize}
-  \item The scalar FCT scheme developed is
+  \item Both the scalar and systems FCT schemes developed are
     \begin{itemize}
       \item Positivity-preserving
-      \item Discrete-maximum-principle preserving
-      \item Not guaranteed monotone, but works well in practice
+      \item Not guaranteed monotone, but work well in practice
       \item Entropy-inequality-enforcing
       \item 2nd-order-accurate for smooth problems
       \item Valid in an arbitrary number of dimensions
-      \item Valid for general meshes
+      \item Valid for unstructured meshes
     \end{itemize}
-  \item The shallow water equations FCT scheme developed is
-    \begin{itemize}
-      \item Positivity-preserving
-      \item Not guaranteed monotone, but works well in practice
-      \item Entropy-inequality-enforcing
-      \item 2nd-order-accurate for smooth problems
-      \item Valid in an arbitrary number of dimensions (in general - the SWE
-        do not apply in 3-D of course)
-      \item Valid for general meshes
-    \end{itemize}
+  \item The scalar scheme additionally satisfies a discrete maximum principle
+  \item More work is required to refine the FCT scheme for systems
 \end{itemize}
 
 \end{frame}
@@ -1273,6 +1314,124 @@ Transport Algorithm to Hyperbolic Conservation Laws}
 \begin{center}
    \includegraphics[width=0.4\textwidth]{./figures/NEUP_Final_Logo_Version-09.jpg}
 \end{center}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Backup Slides}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Low-Order Steady-State Matrix Row Sum}
+
+\begin{itemize}
+  \item Recall that $\ssmatrixletter\ij^{L,n}\equiv\ssmatrixletter\ij^{n}
+    +\diffusionmatrixletter\ij^{L,n}$. Thus,
+      $\sumj\ssmatrixletter\ij^{L,n} = \sumj\ssmatrixletter\ij^{n}
+      +\sumj\diffusionmatrixletter\ij^{L,n} \eqp$
+  \item Recall the zero-row-sum property of $\diffusionmatrix^{L,n}$:
+    \begin{equation}
+      \diffusionmatrixletter_{i,i}^{L,n} =
+        -\sum_{j\ne i}\diffusionmatrixletter_{i,j}^{L,n}
+      \eqc \quad \Rightarrow \quad
+        \sumj\diffusionmatrixletter_{i,j}^{L,n} = 0 \eqp
+    \end{equation}
+  \item Thus $\sumj\ssmatrixletter^{L,n}\ij =
+   \sumj \ssmatrixletter^{\timeindex}\ij$:
+\begin{equation}
+  \sumj\ssmatrixletter^{L,n}\ij = \sumj \intSi
+    \left(\mathbf{\consfluxletter}'(\approximatescalarsolution^\timeindex)
+      \cdot\nabla\testfunction_j(\x) +
+      \reactioncoef(\x)\testfunction_j(\x)\right)\testfunction_i(\x) d\volume \eqp
+\end{equation}
+  \item Now, using the fact that $\sumj\testfunction_j(\x)=1$
+    (and $\nabla 1 = 0$) gives
+    \begin{equation}
+      \sumj\ssmatrixletter^{L,n}\ij =
+        \intSi\reactioncoef(\x)\testfunction_i(\x) d\volume \eqp
+    \end{equation}
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Comparison of Time Discretizations}
+
+\begin{center}
+   \includegraphics[width=0.9\textwidth]
+     {\contentdir/results/transport/time_methods/compare_time_methods.pdf}
+\end{center}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Backward Euler Galerkin FCT for Different CFL Numbers}
+
+\begin{center}
+   \includegraphics[width=0.9\textwidth]
+     {\contentdir/results/transport/compare_cfl/compare_cfl.pdf}
+\end{center}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Discrete Maximum Principle Bounds for a Theta-Scheme}
+
+\begin{itemize}
+\item Recall the DMP bounds 
+  $\DMPbound_i^-\leq \solutionletter_i^{L,\timeindex+1}\leq \DMPbound_i^+$
+  for explicit Euler:
+      \begin{equation}
+         W_i^\pm \equiv U_{\substack{\max\\\min},i}^n\left(
+         1-\frac{\dt}{M_{i,i}^L}
+         \sum\limits_j A\ij^{L,n}\right)
+         + \frac{\Delta t}{M_{i,i}^L}b_i^n \eqp
+      \end{equation}
+\item In contrast, the DMP bounds for the $\theta$ scheme are implicit:
+\begin{subequations}
+\begin{multline}\label{eq:theta_bounds}
+   \DMPbound_i^\pm
+   \equiv \frac{1}{1+\frac{\theta\timestepsize}{\massmatrixletter^L_{i,i}}
+     \ssmatrixletter_{i,i}^{L,\timeindex+1}}\Bigg[\pr{1
+     - \frac{(1-\theta)\timestepsize}{\massmatrixletter^L_{i,i}}
+       \sumj\ssmatrixletter_{i,j}^{L,\timeindex}}
+       \solutionletter_{\substack{\max\\\min},i}^\timeindex\\
+     - \frac{\theta\timestepsize}{\massmatrixletter^L_{i,i}}
+       \sumjnoti\ssmatrixletter_{i,j}^{L,\timeindex+1}
+       \solutionletter_{\substack{\max\\\min},i}^{L,\timeindex+1}
+     + \frac{\timestepsize}{\massmatrixletter^L_{i,i}}\pr{(1-\theta)
+       \ssrhsletter_i^\timeindex + \theta\ssrhsletter_i^{\timeindex+1}}\Bigg] \eqc
+\end{multline}
+\begin{equation}
+  \solutionletter_{\substack{\max\\\min},i}^\timeindex
+  = \substack{\max\\\min\limits_{j\in\indices(\support_i)}}
+    \solutionletter_j^\timeindex
+  \eqc \quad
+  \solutionletter_{\substack{\max\\\min},i}^{L,\timeindex+1}
+  = \substack{\max\\\min\limits_{j\in\indices(\support_i)}}
+  \solutionletter_j^{L,\timeindex+1}
+  \eqp
+\end{equation}
+\end{subequations}
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{1-D Dam Break, 256 Cells}
+
+\begin{center}
+   \includegraphics[width=0.9\textwidth]
+     {\contentdir/results/shallowwater/dam_break_flat/height_FE_256cells.pdf}
+\end{center}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{1-D Dam Break, 256 Cells}
+
+\begin{center}
+   \includegraphics[width=0.9\textwidth]
+     {\contentdir/results/shallowwater/dam_break_flat/momentum_FE_256cells.pdf}
+\end{center}
+
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
