more work on prelim

--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -207,6 +207,7 @@
 
 % radiation transport
 \newcommand{\angularflux}{\psi}
+\newcommand{\scalarflux}{\phi}
 \newcommand{\speedoflight}{c}
 \newcommand{\totalcrosssection}{\Sigma_t}
 \newcommand{\reactioncoef}{\sigma}
