changes to proposal and prelim

--- a/doc/proposal/conclusions.tex
+++ b/doc/proposal/conclusions.tex
@@ -1,6 +1,6 @@
 Preliminary results show that the developed entropy-based FCT scheme
 is effective at preventing the formation of spurious oscillations and
-negativities; however, even with discrete LED criterion satisfied, it is
+negativities; however, even with the imposed physical bounds satisfied, it is
 possible to generate spurious plateaus. While the monotonicity property is
 not guaranteed, positivity preservation is guaranteed.
 For scalar conservation laws,
