minor work on implementation doc

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -81,3 +81,5 @@
 %===============================================================================
 \section{Implementation\label{sec:implementation}}
 %===============================================================================
+  \input{content/implementation/implementation.tex}
+
